# storage_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_common.cc  bench_common.h  storage_engine_bench.cc
docs/superpowers/specs/: 2026-07-01-storage-engine-v0-design.md
include/storage_engine/: db.h  status.h  task.h
src/: common.cc  common.h  db.cc  memtable.cc  memtable.h  wal.cc  wal.h  write_batch.cc  write_group_scratch.h
src/io/: uring_executor.cc  uring_executor.h
tests/: test_db.cc
